2017-10-05 Franz Holzinger <franz@ttproducts.de>
    * support for extensions like agency_tt_address
    * bugfix: CaptchaManager for TYPO3 7 and 8
    * bugfix: doNotEnforceUsername must not require the username even if it is in setup
    * replace all t3lib functions in the new classname code

2017-07-29 Franz Holzinger <franz@ttproducts.de>
    * bugfix: The security hash must always be valid during a CREATE if no former value exists.
    * bugfix: No automatic login must be tempted after an APPROVE
    * support for TYPO3 8.x

2017-02-10 Franz Holzinger <franz@ttproducts.de>
    * bugfix: value set by overrideValues if must not be overwritten again

2016-11-26 Franz Holzinger <franz@ttproducts.de>
	* bugfix: zero (0) checkbox value has been wrongly converted into On

2016-11-22 Franz Holzinger <franz@ttproducts.de>
	* bugfix PHP error: Missing argument 25 for tx_agency_email::compile
	* new feature: FE has_privileges in order to have special features to this user in other extensions like discounts in tt_products and voucher

2016-11-16 Franz Holzinger <franz@ttproducts.de>
	* bugfix: Check if the table sys_dmail_category exists before its TCA is added. Otherwise the LIST module will produce SQL errors.

2016-08-31 Franz Holzinger <franz@ttproducts.de>
	* bugfix: text and blob must have a default null value by TCA and not by SQL

2016-08-23 Franz Holzinger <franz@ttproducts.de>
	* bugfix: Setfixed needs the read in original array in order to generated the authorization key by the user group. It must not be cleared.
	* bugfix: Support STRICT mysql mode STRICT_ALL_TABLES and STRICT_TRANS_TABLES.
	  Add default NULL values to tinytext, text and blob
	* bugfix: TYPO3 does not support the compatVersion in the setup. Users of TYPO3 4.5 must add the additional setup for Agency Registration compatibility TYPO3 4.5

2016-07-30 Franz Holzinger <franz@ttproducts.de>
	* fix bugs for PHP 7
	* make the securedFieldArray static because they should not be changed dynamically
