@@ -21,7 +21,7 @@ $EM_CONF[$_EXTKEY] = array(
     'author_company' => 'jambage.com',
     'CGLcompliance' => '',
     'CGLcompliance_note' => '',
-    'version' => '0.4.1',
+    'version' => '0.4.2',
     'constraints' => array(
         'depends' => array(
             'php' => '5.3.3-7.99.99',
