@@ -551,10 +551,11 @@ If you wish to accept our invitation and confirm your registration in &lt;b&gt;%
 			<label index="internal_decrypt_auto_login_failed">Failed to decrypt auto login password</label>
 			<label index="internal_rsaauth_retrieve_private_key_failed">RSA auth service failed to retrieve private key</label>
 			<label index="internal_rsaauth_process_incoming_password_failed">RSA auth service failed to process incoming password</label>
-			<label index="internal_salted_passwords_disabled">Salted passwords must be enabled in front end</label>
+			<label index="internal_salted_passwords_disabled">Salted passwords must be enabled for the front end</label>
 			<label index="internal_salted_passwords_no_instance">Could not get a salting instance from saltedpasswords</label>
 			<label index="internal_required_extension_missing">The extension "%1$s" is required and must be installed</label>
 			<label index="internal_conflicting_extension_installed">The conflicting extension "%1$s" must be uninstalled</label>
+            <label index="internal_required_typoscript_missing">TypoScript is missing. The static from extensions have not been included</label>
 			<label index="internal_required_authentication_service_not_available">Required authentication service not available</label>
 			<label index="internal_auto_login_failed">The auto login has failed.</label>
 			<label index="internal_no_enabled_user">The user "%s" is not existent or enabled.</label>
