@@ -1,3 +1,6 @@
+2017-11-28 Franz Holzinger <franz@ttproducts.de>
+    * insert a check to verify if the static setup from this extension has been included in the website TypoScript
+
 2017-10-05 Franz Holzinger <franz@ttproducts.de>
     * support for extensions like agency_tt_address
     * bugfix: CaptchaManager for TYPO3 7 and 8
